V1.17.1: World of Color CHANGELOG: 1) Added themes 2) Added 5 new themes - Gameboy - Vampire - SNES - Halloween - University of Michigan Maize and Blue 3) Added cookie memory support for current selected theme 4) Changed toggles to be more visually appealing when focused on 5) Fixed bugs with volume slider - arrow keys change volume when changing focus - slider now changes to highlight color when focused on 6) Fixed bugs associated with start menu - Fixed bug where Tic-Tac-Toe start menu text isn't centered - Fixed bug where strange character appears at beginning of each line on Mac - Made keyboard control scrolling smooth  7) Jumping from instructions to changelog and back will not be smooth and automatically jump
TO DO:
1) Update images in instructions
- Consider also adding more images
2) Add easter eggs
3) Add online multiplayer support
4) Figure out bug of switching between mouse and keyboard controls

--- a/Styles/Settings.css
+++ b/Styles/Settings.css
@@ -198,3 +198,7 @@ input:checked + .toggleSlider:before {
 .toggleSwitch:focus > input:checked + .toggleSlider {
     background-color: var(--highlight);
 }
+
+#themeSelection {
+    width: 60%;
+}
