--- a/Styles/StartMenu.css
+++ b/Styles/StartMenu.css
@@ -1,8 +1,10 @@
 #startMenuWrapper {
-    display: flex;
-    flex-flow: column;
+    display: grid;
+    /* flex-flow: column; */
+    grid-template-rows: 40% 20% 20%;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 100%;
 }
